[package]
name = "caltraind"
version = "0.1.1"
authors = ["Andrew Houts <ahouts4@gmail.com>"]
description = "realtime notification generator for caltrain arrivals"
license = "Apache-2.0 OR MIT"
edition = "2018"

[profile.release]
lto = true

[dependencies]
actix = "0.8"
actix-web = { version = "1.0", features = ["uds"] }
actix-broker = "0.2"
daemonize = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
nix = "0.15"
once_cell = "1.2"
html5ever = "0.24"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
regex = "1.3"
notify-rust = "3.6"
clap = "2.33"
chrono = "0.4"
time = "0.1"
